@@ -69,20 +69,20 @@ function gen_user_personal_data(&$tpl, &$sql, $user_id) {
 	$rs = exec_query($sql, $query, array($user_id));
 	$tpl->assign(
 		array(
-			'FIRST_NAME'	=> empty($rs->fields['fname'])?'':$rs->fields['fname'],
-			'LAST_NAME'		=> empty($rs->fields['lname'])?'':$rs->fields['lname'],
-			'FIRM'			=> empty($rs->fields['firm'])?'':$rs->fields['firm'],
-			'ZIP'			=> empty($rs->fields['zip'])?'':$rs->fields['zip'],
-			'CITY'			=> empty($rs->fields['city'])?'':$rs->fields['city'],
-			'STATE'			=> empty($rs->fields['state'])?'':$rs->fields['state'],
-			'COUNTRY'		=> empty($rs->fields['country'])?'':$rs->fields['country'],
-			'STREET_1'		=> empty($rs->fields['street1'])?'':$rs->fields['street1'],
-			'STREET_2'		=> empty($rs->fields['street2'])?'':$rs->fields['street2'],
-			'EMAIL'			=> empty($rs->fields['email'])?'':$rs->fields['email'],
-			'PHONE'			=> empty($rs->fields['phone'])?'':$rs->fields['phone'],
-			'FAX'			=> empty($rs->fields['fax'])?'':$rs->fields['fax'],
-			'VL_MALE'		=> (($rs->fields['gender'] == 'M')? 'selected="selected"' : ''),
-			'VL_FEMALE'		=> (($rs->fields['gender'] == 'F')? 'selected="selected"' : ''),
+			'FIRST_NAME'	=> empty($rs->fields['fname']) ? '' : $rs->fields['fname'],
+			'LAST_NAME'		=> empty($rs->fields['lname']) ? '' : $rs->fields['lname'],
+			'FIRM'			=> empty($rs->fields['firm']) ? '' : $rs->fields['firm'],
+			'ZIP'			=> empty($rs->fields['zip']) ? '' : $rs->fields['zip'],
+			'CITY'			=> empty($rs->fields['city']) ? '' : $rs->fields['city'],
+			'STATE'			=> empty($rs->fields['state']) ? '' : $rs->fields['state'],
+			'COUNTRY'		=> empty($rs->fields['country']) ? '' : $rs->fields['country'],
+			'STREET_1'		=> empty($rs->fields['street1']) ? '' : $rs->fields['street1'],
+			'STREET_2'		=> empty($rs->fields['street2']) ? '' : $rs->fields['street2'],
+			'EMAIL'			=> empty($rs->fields['email']) ? '' : $rs->fields['email'],
+			'PHONE'			=> empty($rs->fields['phone']) ? '' : $rs->fields['phone'],
+			'FAX'			=> empty($rs->fields['fax']) ? '' : $rs->fields['fax'],
+			'VL_MALE'		=> (($rs->fields['gender'] == 'M') ? 'selected="selected"' : ''),
+			'VL_FEMALE'		=> (($rs->fields['gender'] == 'F') ? 'selected="selected"' : ''),
 			'VL_UNKNOWN'	=> ((($rs->fields['gender'] == 'U') || (empty($rs->fields['gender']))) ? 'selected="selected"' : '')
 		)
 	);
